# fetch_msgs

./: CHANGELOG.rst  README.md  package.xml
fetch_auto_dock_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
fetch_auto_dock_msgs/action/: Dock.action
fetch_driver_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
fetch_driver_msgs/action/: DisableCharging.action
fetch_driver_msgs/msg/: ChargerState.msg  GripperState.msg  Gyro.msg  LocalizationStatus.msg  RobotState.msg  SafetyLaserState.msg
msg/: ChargerState.msg
