<package>
  <name>fetch_driver_msgs</name>
  <version>0.4.0</version>
  <description>
    Messages for the fetch_drivers package
  </description>
  <author>Michael Ferguson</author>
  <author>Derek King</author>
  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>power_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>power_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
