<?xml version="1.0"?>
<package>
  <name>fetch_driver_msgs</name>
  <version>1.1.0</version>
  <description>
    Messages for the fetch_drivers package
  </description>

  <author>Michael Ferguson</author>
  <author>Derek King</author>
  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
  <maintainer email="amoriarty@fetchrobotics.com">Alex Moriarty</maintainer>

  <license>BSD</license>
  <url>http://wiki.ros.org/fetch_driver_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>power_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>power_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
